samples/_failures_safe/1761005702_a81095_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a4802774.c: In function ‘main’:
./samples/SAFE/__tmp_a4802774.c:172:5: error: expected expression at end of input
  172 |     if (len > 0 &&
      |     ^~
./samples/SAFE/__tmp_a4802774.c:172:5: error: expected declaration or statement at end of input
